--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<div class="logo"><span class="image"><img src="images/logo.jpg" alt="" /></</span></div>
 							<h2>Sowaco global energy</h2>
 							<p>Built on trust. Powered by the sun <a href="https://www.tiktok.com/@sowaco.global.energy?_t=ZS-8zKzdsQgzUA&_r=1">@S.G.E
 
@@ -189,4 +189,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
