--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="image"><img src="images/logo.jpg" alt="" /></</span></div>
+							<a class="image"><img src="images/logo2.jpg" alt="" width="250" height="100"/></a>
+							<!--<div class="logo"><span class="icon fa-gem"></span></div>-->
 							<h2>Sowaco global energy</h2>
 							<p>Built on trust. Powered by the sun <a href="https://www.tiktok.com/@sowaco.global.energy?_t=ZS-8zKzdsQgzUA&_r=1">@S.G.E
 
@@ -191,3 +192,4 @@
 	</body>
 
 </html>
+
