--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>SoWaCo Global</title>
+		<link rel="icon" type="image/avif" href="images/icon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -192,5 +193,6 @@
 	</body>
 
 </html>
+
 
 
