--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>SoWaCo Global</title>
-		<link rel="icon" type="image/avif" href="images/icon.png">
+		<!--<link rel="icon" type="image/avif" href="images/icon.png">-->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -193,6 +193,7 @@
 	</body>
 
 </html>
+
 
 
 
