--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Solid State by HTML5 UP</title>
+		<title>SoWaCo Global</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -56,7 +56,7 @@
 									<h3 class="major">About us</h3>
 									<p>We are inspired by the power of innovation and the pursuit of excellence in every service we provide. From exploring cutting-edge ideas to crafting solutions tailored to our client's needs, we strive to deliver experiences that delight Nigerians nationwide. Our work is guided by curiosity, creativity, and a commitment to exceeding expectations, ensuring every project makes a meaningful impact across the country. Innovation fuels our journey, and exceptional service, rooted in understanding and pleasing Nigerians everywhere, defines our success.</p>
 
-									<p>With over 8 years of hands-on experience, our team combines technical expertise with industry-recognized standards to deliver top-quality solutions. We are COREN and NESMA certified, ensuring that every installation meets rigorous safety, efficiency, and professional benchmarks. This blend of experience, certification, and commitment allows us to consistently provide reliable, innovative, and satisfactory services to clients nationwide.</p>
+									<p>With over 8 years of hands-on experience, our team combines technical expertise with industry-recognized standards to deliver top-quality solutions. We are COREN and NEMSA certified, ensuring that every installation meets rigorous safety, efficiency, and professional benchmarks. This blend of experience, certification, and commitment allows us to consistently provide reliable, innovative, and satisfactory services to clients nationwide.</p>
 
 									<h3 class="major">Our services</h3>
 									<p>We offer a comprehensive range of solar solutions designed to meet the energy needs of homes, businesses, and communities across Nigeria. Our products include high-quality solar panels, inverters, batteries, and complete solar kits. Beyond products, we provide professional services such as solar system design, installation, maintenance, and consultation to ensure optimal performance and efficiency. Whether it's a small residential setup or a large commercial project, our solutions are tailored to deliver reliable, sustainable, and cost-effective solar energy.</p>
@@ -149,4 +149,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
