--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								<div class="inner">
 									<a href="generic.html" class="image"><img src="images/why.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">How is works</h2>
+										<h2 class="major">How it works</h2>
 										<p><B>1. Consultation : </B> We assess your energy needs.</p>
 										<p><b>2. Design & Quote : </b> Customized solar solution with clear pricing.</p>
 											<p><b>3. Installation : </b> Professional, hassle-free setup.</p>
@@ -193,6 +193,7 @@
 	</body>
 
 </html>
+
 
 
 
