--- a/generic.html
+++ b/generic.html
@@ -76,6 +76,12 @@
 										</article>
 										<article>
 											<a class="image"><img src="images/3.3 U.jpg" alt="" /></a>
+											<h3 class="major">4-channel CCTV System</h3>
+											<p> A 4-channel hikvision indoor CCTV system, Sucessfully carried out in Gwarinpa, FCT- Abuja.</p>
+											
+										</article>
+										<article>
+											<a class="image"><img src="images/3.3 U.jpg" alt="" /></a>
 											<h3 class="major">3.3kw SRNE Inverter System</h3>
 											<p>a 3.3kw SRNE Inverter using 2 unit of 220Ah lead acid battery with 4 unit of 590watt solar panels, Sucessfully carried out in Benin city, Edo state.</p>
 											
@@ -151,3 +157,4 @@
 	</body>
 
 </html>
+
