--- a/generic.html
+++ b/generic.html
@@ -75,7 +75,7 @@
 											
 										</article>
 										<article>
-											<a class="image"><img src="images/4-channel.jpg" alt="" /></a>
+											<a class="image"><img src="images/4channel.jpg" alt="" /></a>
 											<h3 class="major">4-channel CCTV System</h3>
 											<p> A 4-channel hikvision indoor CCTV system, Sucessfully carried out in Gwarinpa, FCT- Abuja.</p>
 											
@@ -157,5 +157,6 @@
 	</body>
 
 </html>
+
 
 
