--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 											
 										</article>
 										<article>
-											<a class="image"><img src="images/3.3 U.jpg" alt="" /></a>
-											<h3 class="major">3.3kw SRNE Inverter System</h3>
-											<p>a 3.3kw SRNE Inverter using 2 unit of 220Ah lead acid battery with 4 unit of 590 watts solar panels, Sucessfully carried out in Benin city, Edo state.</p>
+											<a class="image"><img src="images/4channel.jpg" alt="" /></a>
+											<h3 class="major">4-channel CCTV System</h3>
+											<p> A 4-channel hikvision indoor CCTV system, Sucessfully carried out in Gwarinpa, FCT- Abuja.</p>
 											
 										</article>
 										<article>
@@ -193,6 +193,7 @@
 	</body>
 
 </html>
+
 
 
 
