--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="generic.html" class="image"><img src="images/3.3.jpg" alt="" /></a>
+									<a href="generic.html" class="image"><img src="images/WhatsApp Image 2025-08-31 at 15.34.29_11a33c0b.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Reliable Solar Solutions for Homes & Businesses</h2>
 										<p>We provide end-to-end solar solutions, from sales and expert installation to ongoing maintenance, so you can enjoy clean, dependable energy and long-term savings without the stress.</p>
@@ -71,7 +71,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="generic.html" class="image"><img src="images/WhatsApp Image 2025-08-31 at 15.34.29_11a33c0b.jpg" alt="" /></a>
+									<a href="generic.html" class="image"><img src="images/Solar CCTV.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Why Choose Us</h2>
 										<p><B>Trusted Expertise : </B> Years of experience in solar installations.</p>
@@ -193,6 +193,7 @@
 	</body>
 
 </html>
+
 
 
 
